--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,15 @@ header{
     align-items:center;
 
 } 
+
+label{
+    display: block;
+    margin-top: 8px;
+    
+}
+
+.inputsatu{
+    color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+}
