--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,24 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    background-color: beige;
 }
 
 header{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
     text-align: left;
     height: 100px;
     display:flex;
-    align-items:center;
+    flex-direction: row;
+    justify-content:center;
+    font-size:larger;
+    
 
 } 
+
+.kk{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 label{
     display: block;
