--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: beige;
+    background-color: whitesmoke
 }
 
 header{
@@ -10,14 +10,28 @@ header{
     height: 100px;
     display:flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content:left;
     font-size:larger;
+    flex-basis: 50px;
     
 
 } 
 
 .kk{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+img.gambarrumus{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.buttonhitung{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 label{
