--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: whitesmoke
+    background-color: gray
 }
 
 header{
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: left;
-    height: 100px;
+    height: 80px;
     display:flex;
     flex-direction: row;
     justify-content:left;
     font-size:larger;
-    flex-basis: 50px;
     
 
 } 
@@ -25,13 +24,25 @@ img.gambarrumus{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 20px;
 
 }
 
-.buttonhitung{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+button{
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+    
+}
+
+button:hover{
+    background-color: brown;
+}
+
+button:active{
+    transform: translateY(2px);
 }
 
 label{
@@ -44,4 +55,20 @@ label{
     color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
+}
+
+.buttonhitung{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+
+}
+
+#Luas{
+    margin-right: 10px;
+}
+
+#Keliling{
+    margin-left: 10px;
 }
