--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: gray
+    background-color: #91C8E4;
 }
 
 header{
-    background-color: rgb(0, 0, 0);
+    background-color: #4682A9;
     color: white;
     text-align: left;
     height: 80px;
@@ -24,7 +24,7 @@ img.gambarrumus{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 28px;
 
 }
 
@@ -38,7 +38,7 @@ button{
 }
 
 button:hover{
-    background-color: brown;
+    background-color: #749BC2;
 }
 
 button:active{
@@ -51,17 +51,23 @@ label{
     
 }
 
+footer{
+    margin-top: 800px;
+    color: rgb(0, 0, 0);
+}
+
 .inputsatu{
     color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
+    margin-top: 18px;
 }
 
 .buttonhitung{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 12px;
 
 }
 
