--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@ body{
 header{
     background-color: #4682A9;
     color: white;
-    text-align: left;
+    text-align: center;
     height: 80px;
     display:flex;
     flex-direction: row;
-    justify-content:left;
+    justify-content:center;
     font-size:larger;
+    width: 22%;
+    border-radius: 10px;
     
 
 } 
@@ -27,6 +29,17 @@ img.gambarrumus{
     margin-top: 28px;
 
 }
+
+.inputsisipersegi{
+    margin-left: 330px;
+    margin-top: 20px;
+    height: 30px;
+    border-radius: 10px;
+    border:none;
+    width: 50%;
+    
+}
+
 
 button{
     padding: 10px 20px;
