--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,18 @@ img.gambarrumus{
     margin-left: auto;
     margin-right: auto;
     margin-top: 28px;
+    border-radius: 30px;
 
 }
 
 .inputsisipersegi{
-    margin-left: 330px;
-    margin-top: 20px;
+    padding: 1em;
     height: 30px;
     border-radius: 10px;
-    border:none;
-    width: 50%;
+    justify-content: center;
+    border: none;
+    width: calc(100% - 70%);
+
     
 }
 
@@ -72,13 +74,12 @@ footer{
 .inputsatu{
     color: rgb(0, 0, 0);
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     margin-top: 18px;
 }
 
 .buttonhitung{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     margin-top: 12px;
 
@@ -86,8 +87,20 @@ footer{
 
 #Luas{
     margin-right: 10px;
+    width: 118px;
 }
 
 #Keliling{
     margin-left: 10px;
+    width: 135px;
+}
+#Luas1{
+    margin-right: 10px;
+    width: 118px;
+    
+}
+
+#Keliling1{
+    margin-left: 10px;
+    width: 135px;
 }
