--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,19 @@ img.gambarrumus{
     margin-left: auto;
     margin-right: auto;
     margin-top: 28px;
+        border-radius: 30px;
+    
 
 }
 
 .inputsisipersegi{
-    margin-left: 330px;
-    margin-top: 20px;
+    padding: 1em;
     height: 30px;
     border-radius: 10px;
-    border:none;
-    width: 50%;
+    justify-content: center;
+    border: none;
+    width: calc(100% - 70%);
+
     
 }
 
@@ -58,6 +61,7 @@ button:active{
     transform: translateY(2px);
 }
 
+
 label{
     display: block;
     margin-top: 8px;
@@ -65,14 +69,14 @@ label{
 }
 
 footer{
-    margin-top: 800px;
+    margin-top: 120px;
     color: rgb(0, 0, 0);
 }
 
 .inputsatu{
     color: rgb(0, 0, 0);
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     margin-top: 18px;
 }
 
