--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header{
 
 } 
 
-.kk{
+.hp{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
